# simple-python-template

./: cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{ cookiecutter.__project_slug }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  init-project.sh  pyproject.toml  requirements-dev.txt
{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.__package_name }}/: __main__.py
{{ cookiecutter.__project_slug }}/tests/: main_test.py
