[project]
name = "{{ cookiecutter.__project_slug }}"
version = "{{ cookiecutter.__version }}"
description = "{{ cookiecutter.short_description }}"
authors = [
  {name = "{{ cookiecutter.__full_name }}", email = "{{ cookiecutter.__email }}"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.__github_user }}/{{ cookiecutter.__project_slug }}"
Repository = "https://github.com/{{ cookiecutter.__github_user }}/{{ cookiecutter.__project_slug }}.git"

[project.scripts]
{{ cookiecutter.__project_slug }} = "{{ cookiecutter.__package_name }}.__main__:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["D203"]

[tool.flake8]
max-line-length = 100
max-complexity = 10
exclude = [
    ".git",
    "__pycache__"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [
  "E203", "E501", "RST201", "RST203", "RST301", "W503"
]

[tool.black]
line-length = 100
target-version = ['py{{ cookiecutter.__py_version }}']

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.__package_name }}", "tests"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

{%- if cookiecutter.mypy_pre_commit == 'y' %}
[tool.mypy]
files = ["{{ cookiecutter.__package_name }}"]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
{%- endif %}
